push socket update and get donor api
