# api/swagger.yml
@@ -62,6 +62,28 @@ paths:
           schema:
             $ref: "#/definitions/Error"
   /donors/{donorId}:
+    get:
+      summary: Get a donor's posting
+      description: |
+        Get a donor posting
+      parameters:
+        -
+          $ref: "#/parameters/DonorId"
+      tags:
+        - donors
+      responses:
+        200:
+          description: The donor's posting
+          schema:
+            $ref: "#/definitions/Donor"
+        404:
+          description: Donor not found with specified id
+          schema:
+            $ref: "#/definitions/Error"
+        default:
+          description: Unknown error, Occurs in very rare situation, this indicates that server is unable to process the request and is unaware of the error condition
+          schema:
+            $ref: "#/definitions/Error"
     delete:
       summary: Delete a donor's posting
       description: |
